--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ select
 ; width   : calc(100% - 4px)
 }
 
-.menubtn-show
+.menubtn
 { padding    : 0px 0px 0px 0px
 ; margin     : 0px 0px 0px 0px
 ; background : #000000
@@ -102,9 +102,10 @@ select
 ; top        : 0px
 ; left       : 0px
 ; position   : absolute
+; display    : none
 }
 
-.menudiv-show
+.menudiv
 { border-style : none
 ; padding      : 0px 0px 0px 0px
 ; margin       : 0px 0px 0px 0px
@@ -115,33 +116,7 @@ select
 ; top          : 41px
 ; left         : 10px
 ; position     : absolute
-}
-
-.menubtn-hide
-{ border-style : none
-; padding      : 0px 0px 0px 0px
-; margin       : 0px 0px 0px 0px
-; background   : #000000
-; color        : #ffa500
-; width        : 20px
-; height       : 25px
-; top          : 15px
-; left         : 12px
-; position     : absolute
-; overflow     : hidden
-}
-
-.menudiv-hide
-{ border-style : none
-; padding      : 0px 0px 0px 0px
-; margin       : 0px 0px 0px 0px
-; background   : #000000
-; color        : #ffa500
-; width        : 20px
-; height       : 25px
-; top          : 15px
-; left         : 12px
-; position     : absolute
+; display      : none
 }
 
 #inputbox
