--- a/css/style.css
+++ b/css/style.css
@@ -93,11 +93,12 @@ select
 }
 
 .menubtn
-{ padding    : 0px 0px 0px 0px
+{ border     : 1px solid #000000 
+; padding    : 0px 0px 0px 0px
 ; margin     : 0px 0px 0px 0px
 ; background : #000000
 ; color      : #ffa500
-; width      : 25px
+; width      : 20px
 ; height     : 25px
 }
 
@@ -107,7 +108,7 @@ select
 ; margin       : 0px 0px 0px 0px
 ; background   : #000000
 ; color        : #ffa500
-; width        : 25px
+; width        : 20px
 ; height       : 25px
 ; float        : left
 }
