--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,12 @@ select
 { border  : 1px solid #ffa500
 ; margin  : 0px 0px 0px 0px
 ; padding : 0px 0px 0px 0px
-; height  : calc(100% - 35px)
+; height  : calc(100% - 28px)
 ; width   : calc(100% - 4px)
+}
+
+#maptools
+{ height : 26px
 }
 
 .menubtn
