--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,8 @@ select
 
 #maptools
 { height  : 26px
-; border  : 1px solid #000000
+; width   : calc(100 - 4px)
+; border  : 1px solid #ffa500
 ; margin  : 0px 0px 0px 0px
 ; padding : 0px 0px 0px 0px
 }
