--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ button
 { border      : 1px solid #ffa500
 ; margin      : 0px 0px 0px 0px
 ; padding     : 0px 0px 0px 0px
-; background  : #000000
-; color       : #ffa500
+; background  : #ffa500
+; color       : #000000
 ; font-family : courier
 ; font-size   : 12px
 ; outline     : none
