--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ button
 ; left     : 84px
 }
 
-.hoverinfo
+.maphover
 { border      : 1px solid #000000
 ; background  : #ffa500
 ; color       : #000000
