--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,8 @@ button
 ; color       : #000000
 ; font-family : 'MS PGothic'
 ; font-size   : 12px
-; height      : 300px
+; min-height  : max-content
+; max-height  : 300px
 ; width       : 400px
 ; overflow    : auto
 }
