--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,8 @@ button
 ; font-size   : 12px
 ; max-height  : max-content
 ; width       : 40%
+; top         : 60px
+; left        : 15px
 }
 
 .zoombtn
