--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ button
 ; width       : 40%
 ; top         : 60px
 ; left        : 15px
-; position    : relative
+; position    : static
 }
 
 .zoombtn
