--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,9 @@ button
 { border  : 1px solid #ffa500
 ; margin  : 0px 0px 0px 0px
 ; padding : 0px 0px 0px 0px
+; left    : 250px
 ; height  : calc(100% - 35px)
-; width   : calc(100% - 4px)
+; width   : calc(100% - 252px)
 }
 
 .maphover
