--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,10 @@ button
 
 #ctryfind
 { height   : 26px
-; width    : 40px
-; position : relative
+; width    : 50px
+; position : absolute
+; top      : 0px
+; left     : 250px
 }
 
 #maptools
