--- a/css/style.css
+++ b/css/style.css
@@ -117,12 +117,12 @@ button
 ; float    : left
 }
 
-.yearTag .countryTag
+.yearTag .ctryTag
 { cursor : pointer
 ; color  : #ffa500
 }
 
-.yearTag:hover .countryTag:hover
+.yearTag:hover .ctryTag:hover
 { text-decoration : underline
 }
 
