--- a/css/style.css
+++ b/css/style.css
@@ -108,13 +108,14 @@ button
 }
 
 #mapframe
-{ border   : 1px solid #ffa500
-; margin   : 0px 0px 0px 0px
-; padding  : 0px 0px 0px 0px
-; height   : calc(100% - 35px)
-; width    : calc(100% - 256px)
-; position : relative
-; float    : left
+{ border           : 1px solid #ffa500
+; margin           : 0px 0px 0px 0px
+; padding          : 0px 0px 0px 0px
+; height           : calc(100% - 35px)
+; width            : calc(100% - 256px)
+; position         : relative
+; float            : left
+; background-color : #09093d
 }
 
 .yearTag, .ctryTag
