--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ button
 ; width            : calc(100% - 256px)
 ; position         : relative
 ; float            : left
-; background-color : #09093d
+; background-color : #030312
 }
 
 .yearTag, .ctryTag
