--- a/css/style.css
+++ b/css/style.css
@@ -90,8 +90,8 @@ button
 { border     : 1px solid #ffa500
 ; margin     : 0px 0px 0px 0px
 ; padding    : 0px 0px 0px 0px
-; width      : calc(100% - 4px)
-; height     : 28px
+; width      : 100%
+; height     : 25px
 ; background : #000000
 }
 
@@ -118,7 +118,7 @@ button
 }
 
 .tabencl
-{ height : 100%
+{ height : calc(100% - 50px)
 ; width  : 100%
 }
 
@@ -179,7 +179,7 @@ button
 
 #maptools
 { height  : 26px
-; width   : calc(100% - 4px)
+; width   : 100%
 ; border  : 1px solid #ffa500
 ; margin  : 0px 0px 0px 0px
 ; padding : 0px 0px 0px 0px
