--- a/css/style.css
+++ b/css/style.css
@@ -123,9 +123,10 @@ button
 }
 
 .tabfrme
-{ border : 1px solid #ffa500
-; height : 25px
-; width  : 100%
+{ border        : 1px solid #ffa500
+; border-sizing : border-box
+; height        : 25px
+; width         : 100%
 }
 
 .tabbtns
@@ -135,6 +136,7 @@ button
 
 .bdyfrme
 { border : 1px solid #ffa500
+; border-sizing : border-box
 ; height : calc(100% - 25px)
 ; width  : 100%
 }
