--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ button
 .bdyfrme
 { border        : 1px solid #ffa500
 ; border-sizing : border-box
-; height        : calc(100% - 25px)
+; height        : 100%
 ; width         : 100%
 }
 
