--- a/css/style.css
+++ b/css/style.css
@@ -118,14 +118,15 @@ button
 }
 
 .tabencl
-{ height : calc(100% - 50px)
-; width  : 100%
+{ height     : 100%
+; width      : 100%
+; box-sizing : border-box
 }
 
 .tabfrme
 { border     : 1px solid #ffa500
 ; box-sizing : border-box
-; height     : 25px
+; height     : 27px
 ; width      : 100%
 }
 
