--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,8 @@ button:hover
 }
 
 #outtext
-{ overflow   : auto
+{ border     : 1px solid #ffa500
+; overflow   : auto
 ; width      : calc(100% - 20px)
 ; height     : calc(100% - 45px)
 ; position   : absolute
@@ -107,7 +108,7 @@ button:hover
 ; margin     : 0px 0px 0px 0px
 ; padding    : 0px 0px 0px 0px
 ; width      : 250px
-; height     : calc(100% - 60px)
+; height     : calc(100% - 53px)
 ; float      : left
 ; font-size  : 12px
 ; overflow   : auto
@@ -118,7 +119,7 @@ button:hover
 { border           : 1px solid #ffa500
 ; margin           : 0px 0px 0px 0px
 ; padding          : 0px 0px 0px 0px
-; height           : calc(100% - 60px)
+; height           : calc(100% - 53px)
 ; width            : calc(100% - 252px)
 ; position         : relative
 ; float            : left
