--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ button:hover
 ; width            : calc(100% - 250px)
 ; position         : absolute
 ; float            : left
-; background-color : #030312
+; background-color : #aad3df
 ; left             : 250px
 }
 
