--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ button:hover
 }
 
 #GanttTable
-{ font-family : 'courier new'
+{ font-family : courier
 ; font-size   : 12px
 ; text-align  : left
 }
@@ -181,9 +181,15 @@ button:hover
 ; display  : inline-block
 }
 
+.tooltiptext
+{ border : 1px solid #ffa500
+}
+
 .tooltip .tooltiptext
 { visibility       : hidden
 ; width            : 200px
+; font-family      : courier
+; font-size        : 10px
 ; background-color : '#000000'
 ; color            : '#ffa500'
 ; text-align       : center
