--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ button:hover
 ; font-size        : 11px
 ; background-color : '#ffa500'
 ; color            : '#000000'
-; text-align       : center
+; text-align       : left
 ; border-radius    : 5px
 ; padding          : 5px 0
 ; position         : absolute
