--- a/css/style.css
+++ b/css/style.css
@@ -198,12 +198,16 @@ button:hover
 }
 
 .tooltip .tooltiptext::after
-{ content    : ' '
-; position   : absolute
-; top        : 50%
-; left       : 100%
-; margin-top : -5px
-; border     : 5px solid #000000
+{ content          : ' '
+; position         : absolute
+; top              : 50%
+; left             : 100%
+; margin-top       : -5px
+; border           : 5px solid #000000
+; font-family      : courier
+; font-size        : 11px
+; background-color : '#ffa500'
+; color            : '#000000'
 }
 
 .tooltip:hover .tooltiptext
