--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ button:hover
 ; text-align  : left
 }
 
-#GanttTable:nth-child(even)
+#GanttTable tr:nth-child(even)
 { background-color : #0f0f0f
 }
 
