--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,7 @@ body
 }
 
 table
-{ border  : 0px
-; padding : 0px 0px 0px 0px
-; margin  : 0px 0px 0px 0px
+{ border-spacing : 0px
 }
 
 ::placeholder
