--- a/css/style.css
+++ b/css/style.css
@@ -188,8 +188,9 @@ button:hover
 }
 
 .GanttHeader
-{ border-bottom : 1px dotted #ffa500
-; height        : 50px
+{ border-bottom  : 1px dotted #ffa500
+; height         : 50px
+; vertical-align : bottom
 }
 
 .GanttHeader > div
