--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,10 @@ input
 ; background  : #000000
 }
 
+#GanttYearEnd
+{ border : 1px solid #ffa500 
+}
+
 #outtext
 { border     : 0px
 ; overflow   : auto
@@ -308,17 +312,8 @@ input
 }
 
 #inputbox
-{ border      : 0px
-; margin      : 0px 0px 0px 0px
-; padding     : 0px 0px 0px 0px
-; outline     : none
-; font-family : 'MS PGothic'
-; font-size   : 20px
-; height      : 25px
-; width       : calc(100% - 45px)
-; color       : #ffa500
-; background  : #000000
-; position    : absolute
+{ width    : calc(100% - 45px)
+; position : absolute
 }
 
 #textdiv
