--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,11 @@ input
 ; background  : #000000
 }
 
+#GanttChart
+{ position : relative
+; top      : 20px
+}
+
 #GanttEndYear
 { border   : 1px solid #ffa500
 ; position : relative
@@ -105,6 +110,7 @@ input
 ; background-color : #000000
 ; width            : 100%
 ; top              : 65px
+; z-index          : 100001
 }
 
 #outtext
