--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,8 @@ input
 
 #GanttToolbar
 { position         : fixed
-; background-color : #080817
-; width            : 100%
+; background-color : #000000
+; width            : calc(100% - 20px)
 ; top              : 65px
 ; z-index          : 100001
 }
@@ -170,7 +170,7 @@ input
 ; width            : calc(100% - 20px)
 ; position         : fixed
 ; z-index          : 100001
-; background-color : #0d0d19
+; background-color : #000000
 }
 
 .tabbtns
