--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ input
 #newspnl
 { background-color : #030312
 ; height           : 300px
-; position         : relative
+; position         : absolute
 ; overflow         : auto
 }
 
