--- a/css/style.css
+++ b/css/style.css
@@ -122,16 +122,17 @@ input
 { border     : 0px
 ; overflow   : auto
 ; width      : calc(100% - 20px)
-; height     : calc(100% - 200px)
+; height     : calc(100% - 100px)
 ; position   : relative
 ; box-sizing : border-box
 }
 
 #newspnl
 { background-color : #030312
-; height           : 150px
+; height           : 100px
 ; position         : relative
 ; overflow         : auto
+; top              : 110px
 }
 
 #cmdSelect
