--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ input
 ; height     : calc(100vh - 185px)
 ; position   : relative
 ; box-sizing : border-box
+; display    : block
 }
 
 #newshdr
