--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ input
 { background-color : #060617
 ; height           : 100px
 ; position         : relative
+; display          : block
 ; overflow         : hidden
 }
 
