--- a/css/style.css
+++ b/css/style.css
@@ -267,8 +267,9 @@ input
 }
 
 .ctryFlag
-{ height : 25px
-; width  : 25px
+{ height         : 25px
+; width          : 25px
+; vertical-align : middle
 }
 
 .tooltip
